server side rendered env var

--- a/todo.yaml
+++ b/todo.yaml
@@ -26,8 +26,7 @@ services:
     # Defines environment variables for the workload
     env:
       - name: NEXT_PUBLIC_TEST # Environment variable name
-        value: "{{.ENV}}" # Placeholder for dynamic value substitution; It means whenever someone try to deploy this service, they need to provide a value for this variable.
-        default: hello_world # Default value for the environment variable
+        value: "{{.NEXT_PUBLIC_TEST}}" # Placeholder for dynamic value substitution; It means whenever someone try to deploy this service, they need to provide a value for this variable.
 
     # Specifies the minimum resource allocation
     # This also specify the template price
